--- a/css/style.css
+++ b/css/style.css
@@ -162,21 +162,21 @@ body {
 @media (max-width: 1023px) {
     .texture-2 {
         background-position: -346px -204px, right -346px top 0px;
-        height: 454px;
+        height: 987px;
     }
 }
 
 @media (max-width: 767px) {
     .texture-2 {
         background-position: -346px -204px, right -346px top 0px;
-        height: 454px;
+        height: 987px;
     }
 }
 
 @media (max-width: 460px) {
     .texture-2 {
         background-position: -346px -204px, right -346px top 0px;
-        height: 454px;
+        height: 917px;
     }
 }
 
@@ -239,7 +239,7 @@ address {
 }
 
 .success {
-    margin-top: 275px;
+    margin-top: 360px;
     
     background-color: #57050d; /* layer fill content */
     -moz-box-shadow: -2px 3px 40px rgba(24,24,24,.21); /* drop shadow */
@@ -254,4 +254,54 @@ address {
     font-family: "Kirvy";
     font-weight: lighter;
     text-align: center;
+}
+
+.success:after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    border: inset 6px;
+    border-color: #57050D transparent transparent transparent;
+    border-top-style: solid;
+    position: absolute;
+    bottom: -12px;
+    left: 75px;
+    z-index: 99;
+}
+
+@media only screen and (max-width: 40em) {
+    .reveal-modal {
+        min-height: 0;
+    }
+    
+    .success {
+        margin-top: 416px;
+    }
+    
+    .success:after {
+        left: 50%;
+    }
+    
+    .tiny, .reveal-modal.tiny {
+        margin-left: 81px;
+        width: 162px;
+        height: 112px;
+    }
+}
+@media only screen and (min-width: 40.063em) {
+    .tiny, .reveal-modal.tiny {
+        margin-left: -81px;
+        width: 162px;
+        height: 112px;
+    }
+    
+    .success {
+        margin-top: 384px;
+    }
+}
+
+dialog .close-reveal-modal, .reveal-modal .close-reveal-modal {
+font-size: 2rem;
+top: -5px;
 }
